# superflat

./: .gitignore  CLA.md  CONTRIBUTING.md  Cargo.toml  README.md  README_ZH.md  Trunk.toml  diff  notes.md  pumpkin-test.py  pyproject.toml  script.sh
.github/: pull_request_template.md
.github/workflows/: release.yml
.omx/: metrics.json
.omx/context/: minecraft-gui-overhaul-20260409T153509Z.md
.omx/logs/: omx-2026-04-09.jsonl  session-history.jsonl  tmux-hook-2026-04-09.jsonl  turns-2026-04-09.jsonl
.omx/plans/: minecraft-gui-revamp-plan-zh-v2.md  minecraft-gui-revamp-plan-zh.md  open-questions.md
.omx/state/: hud-state.json  notify-hook-state.json  ralplan-state.json  skill-active-state.json  team-state.json  tmux-hook-state.json  update-check.json
benches/: git_odb.rs  unflatten.rs
blog/: morton_slice.md
docs/: gui-assets.md  gui-guide-zh.md  gui-guide.md  windows-defender-bypass-zh.md  windows-defender-bypass.md
docs/blog/: bench-results.md  bench.md  git-pack-objects.md  python-module-layout.md
docs/blog/bench/: bench-results.csv
python/superflat/: __init__.py  __main__.py  app.py  dumper.py  flatten.py  paths.py  repack.py  utils.py
python/superflat/_superflat/: __init__.pyi  pumpkin.pyi
python/superflat/crafters/: __init__.py  base.py  gzip_nbt.py  raw.py  region.py
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/_pumpkin/: mod.rs  normalize.rs  region_crafter.rs  region_decode.rs
rust/src/_repack/: git_helper.rs  mod.rs  pack.rs
rust/src/_repack/delta/: const.rs  dulwich.rs  git.rs  mod.rs
rust/src/pumpkin/: mod.rs  region_crafter.rs
rust/src/repack/: mod.rs  pack.rs
scripts/: bench.py  bench_commit.py  bench_files_in_pack.py  bench_git_pack.py  block_compress_explore.py  count_chunks.py  export_chunk.py  gen_test_files.py  inspect_bin.py  inspect_commit.py  inspect_git_pack.py  plot_bench_window.py  rebuild_git.sh  section_order_search.py  set-git.sh  zsize.py
src/: crafter.rs  lib.rs  main.rs  odb.rs
src/crafter/: chunk_region.rs  gzip_nbt.rs  mod.rs  other_region.rs  raw.rs
src/fastnbt-btree/: Cargo.toml  pyproject.toml
src/fastnbt-btree/src/: lib.rs
src/odb/: fs.rs  git.rs  mod.rs
src/pumpkin-py/: Cargo.toml  pumpkin_py.pyi  pyproject.toml
src/pumpkin-py/src/: lib.rs  superflat.rs
src/superflat/: __main__.py  app.py  config.py  differ.py  docker-compose.yaml  dumper.py  flatten.py  paths.py  sfnbt.py  utils.py
src/superflat-pumpkin/: Cargo.toml  pyproject.toml  superflat_pumpkin.pyi
src/superflat-pumpkin/src/: lib.rs  normalize.rs  region_crafter.rs
src/superflat/crafters/: __init__.py  base.py  gzip_nbt.py  raw.py  region.py
src/superflat/executors/: __init__.py  base.py  gzip_nbt.py  raw.py  region.py
src/superflat/strategy/: __init__.py  base.py  gzip_nbt.py  raw.py  region.py
src/utils/: cmd.rs  git_cmd.rs  mc_data.rs  mod.rs  nbt.rs  palette.rs  region.rs
src/xdelta3-py/: Cargo.toml  pyproject.toml  xdelta3_py.pyi
src/xdelta3-py/src/: lib.rs
superflat/: Cargo.toml
superflat-cli/: Cargo.toml  main.rs
superflat-gui-backend/: Cargo.toml  tauri.conf.json
superflat-gui-backend/capabilities/: default.json
superflat-gui-backend/icons/: icon.icns
superflat-gui-backend/src/: commands.rs  git_ops.rs  lib.rs  logger.rs  main.rs  profiles.rs
superflat-gui-frontend/: Cargo.toml  app.rs  bindings.rs  components.rs  handlers.rs  hooks.rs  index.html  main.rs  panel.css  state.rs  styles.css  types.rs
superflat/benches/: git_odb.rs  unflatten.rs
superflat/src/: lib.rs
superflat/src/crafter/: chunk_region.rs  gzip_nbt.rs  mod.rs  other_region.rs  raw.rs
superflat/src/odb/: fs.rs  git.rs  mod.rs
superflat/src/utils/: cmd.rs  mc_data.rs  mod.rs  nbt.rs  palette.rs  region.rs
