[project]
name = "superflat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "better-exceptions>=0.3.3",
    "maturin>=1.12.0",
    "platformdirs>=4.9.2",
    "structlog>=25.5.0",
    "typer>=0.23.1",
]

[project.scripts]
superflat = "superflat.__main__:cli"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
