[project]
name = "superflat"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "better-exceptions>=0.3.3",
    "structlog>=25.5.0",
    "typer>=0.23.1",
]

[project.scripts]
superflat = "superflat.__main__:typer_app"
sf = "superflat.__main__:typer_app"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "superflat._superflat"
