[package]
name = "superflat-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
superflat = { path = "../superflat" }
anyhow.workspace = true
log.workspace = true

clap = { version = "4.6.0", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
env_logger = "0.11.9"

[[bin]]
name = "sf"
path = "main.rs"
