[package]
name = "superflat-gui-frontend"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "superflat-gui-frontend"
path = "main.rs"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
gloo-timers = { version = "0.3", features = ["futures"] }
