[package]
name = "fastnbt-btree"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fastnbt_btree"
crate-type = ["cdylib"]

[dependencies]
fastnbt = { version = "2.6.0", git = "https://github.com/HairlessVillager/fastnbt.git", branch = "feat/btreemap" }
pyo3 = "0.27.0"
