[package]
name = "xdelta3-py"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "xdelta3_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.0"
xdelta3 = { git = "https://github.com/HairlessVillager/xdelta3-rs.git", rev = "cf8b1bd4124ab52da186940242785fdfe97511a3", version = "0.1.5" }
